--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -2121,7 +2121,7 @@ Rating: {rating}/10   --> Rating: /10
 <script src="${http_root}js/parsley.min.js"></script>
 <script src="${http_root}js/Sortable.min.js"></script>
 <script src="${http_root}js/jquery.inputaffix.min.js"></script>
-<script src="${http_root}js/jquery.qrcode.min.js"></script>
+<script src="${http_root}js/kjua.min.js"></script>
 <script>
     function getConfigurationTable() {
         $.ajax({
