Change QR background to "not-white"

--- a/data/interfaces/default/mobile_devices_table.html
+++ b/data/interfaces/default/mobile_devices_table.html
@@ -94,7 +94,8 @@ DOCUMENTATION :: END
             render: 'canvas',
             ecLevel: 'H',
             size: 256,
-            fill: '#000'
+            fill: '#000',
+            back: '#eee'
         });
     }
 
