--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -2058,7 +2058,7 @@ Rating: {rating}/10   --> Rating: /10
                     Note: OneSignal.com must not be blocked (e.g. in Pi-hole) for device registration.
                 </p>
                 <label>QR Code</label>
-                <pre id="api_qr_code" style="text-align: center"></pre>
+                <div id="api_qr_code"></div>
                 <label>Tautulli Address</label>
                 <input type="text" class="form-control" id="api_qr_address">
                 <p class="help-block" id="api_qr_localhost" style="display: none;">
