library_stats_items table creation and data setup

--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -450,7 +450,7 @@
                     }
 
                     /**
-                     * If a chart matching chart is found the other will be retrieved through the syncLink so no additional iteration is required.
+                     * If a matching chart is found the other will be retrieved through the syncLink so no additional iteration is required.
                     **/
                     break;
                 }
