added episode identifier with season in last watch

--- a/data/interfaces/default/home_stats.html
+++ b/data/interfaces/default/home_stats.html
@@ -187,6 +187,8 @@ DOCUMENTATION :: END
                                     ${row['users_watched']}
                                     % elif stat_id == 'most_concurrent':
                                     ${row['count']}
+                                    % elif stat_id == 'last_watched':
+                                    ${row['season']}
                                     % endif
                                 </div>
                             </li>
