cleanup and setting implementation

--- a/data/interfaces/default/home_stats.html
+++ b/data/interfaces/default/home_stats.html
@@ -188,7 +188,7 @@ DOCUMENTATION :: END
                                     % elif stat_id == 'most_concurrent':
                                     ${row['count']}
                                     % elif stat_id == 'last_watched':
-                                    ${row['season']}
+                                    ${row['identifier']}
                                     % endif
                                 </div>
                             </li>
