--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -459,6 +459,13 @@
                             </div>
                         </div>
 
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="identifier_last_watched" name="identifier_last_watched" value="1" ${config['identifier_last_watched']}> Identifier for Last Watched
+                            </label>
+                            <p class="help-block">Enable to have the season and episode number listed for entries in the Last Watched card.</p>
+                        </div>
+
                         <div class="padded-header">
                             <h3>Library Statistics</h3>
                         </div>
