--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -1560,9 +1560,9 @@
                             <p class="help-block">
                                 Get the Tautulli Remote app on
                                 <a href="${anon_url('https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote')}" target="_blank" rel="noreferrer">Google Play</a>
-                                to access Tautulli from your mobile device,
-                                or beta test for iOS on
-                                <a href="${anon_url('https://testflight.apple.com/join/G29OmIm1')}" target="_blank" rel="noreferrer">TestFlight</a>.
+                                or the
+                                <a href="${anon_url('https://apps.apple.com/us/app/tautulli-remote/id1570909086')}" target="_blank" rel="noreferrer">App Store</a>
+                                to access Tautulli from your mobile device.
                                 <br />
                             </p>
                             <p class="help-block">
@@ -1570,7 +1570,7 @@
                                     <a href="${anon_url('https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote')}" target="_blank" rel="noreferrer"><img alt="Get it on Google Play" src="images/google-play-badge.svg" /></a>
                                 </span>
                                 <span class="app-badge">
-                                    <a href="${anon_url('https://testflight.apple.com/join/G29OmIm1')}" target="_blank" rel="noreferrer"><img alt="Download on TestFlight" src="images/testflight-badge.png" /></a>
+                                    <a href="${anon_url('https://apps.apple.com/us/app/tautulli-remote/id1570909086')}" target="_blank" rel="noreferrer"><img alt="Download on the App Store" src="images/app-store-badge.svg" /></a>
                                 </span>
                                 <span class="app-badge">
                                     <small>Google Play and the Google Play logo are trademarks of Google LLC.</small>
